maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:24: error: value && is not a member of Unit
      if (estMurNord() && (getY() < minY || minY == -1))
                       ^IslandMaze:69: error: Boolean does not take parameters
  return isMurNord();
                  ^IslandMaze:69: warning: enclosing method estMurNord has result type Unit: return value discarded
  return isMurNord();
  ^